# deweave

./: pyproject.toml
deweave/: __main__.py
tests/: test_deweave.py
